
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2006-05-26 DP  1.6.0  Add a data dictionary report for tables.
2006-05-24 DP  1.6.0  Don't enable the OK button on the Grant Wizard until
                      there is something to do, per Dave Minter.
2006-05-24 DP  1.6.0  Use PQresultErrorField() to get more error details
                      from query results. Requires libpq 7.4+.
2006-05-23 DP  1.6.0  Highlight the error word in the query tool if a syntax
                      error is reported by the database.
2006-05-23 DP  1.6.0  Add a guru hint to advise users to use the CREATE script
                      tool to edit function/view code in the Query Tool.
2006-05-22 DP  1.6.0  Display the current character number in the query tool
                      status bar.
2006-05-22 DP  1.4.3  Allow non-superusers to edit roles where appropriate
                      [Thomas Sondag]
2006-05-22 DP  1.6.0  Add options to show line ends and whitespaces in the
                      query tool.
2006-05-17 DP  1.4.3  Allow non-superuser roles with the appropriate 
                      permissions to create roles and DBs.
2006-05-15 DP  1.4.3  Fix a bug in the pgpass save code that could
                      damage files.
2006-05-15 DP  1.6.0  Add a word wrap option to the query tool editor.
2006-05-15 DP  1.6.0  Add brace highlighting to the SQL Text Box control.
2006-05-15 DP  1.6.0  Don't save the position/size when closing minimised
                      Windows as the size values will be wrong on some OSs.
2006-05-15 DP  1.6.0  Add a Copy menu option to the main form to copy from the
                      SQL pane.
2006-05-15 DP  1.6.0  Detect and warn the user of concurrent edits of