@@ -35,6 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-05-30 DP  1.6.0  Display, and allow null values to be set in boolean
+                      columns in the Edit Grid per Hubert Plaschke.
 2006-05-26 DP  1.6.0  Add a data dictionary report for tables.
 2006-05-24 DP  1.6.0  Don't enable the OK button on the Grant Wizard until
                       there is something to do, per Dave Minter.
